--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -6,9 +6,7 @@
   <title>Create User</title>
   <style>
     body {
-      background-image: url(https://www.purina.co.uk/sites/default/files/2020-12/Dog_1098119012_Teaser.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
+      background-color: #243e36;
       margin: 0;
       padding: 0;
       background-color: #17a2b8;
@@ -28,9 +26,6 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/flow">Flow</a>
-    </nav>
     <div id="create">
         <div class="container">
             <div id="create-row" class="row justify-content-center align-items-center">
