--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -6,16 +6,19 @@
   <title>User</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/public/css/admin-dash.css">
+  <style>
+
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav  class="navbar navbar-expand-lg">
     <h1><%= user.username.charAt(0).toUpperCase() + user.username.slice(1) %></h1>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link btn btn-info" href="/createPost">Ny Post</a>
+        <a class="nav-link btn btn-danger" href="/createPost">Ny Post</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn btn-info" href="/logout">Logga ut</a>
+        <a class="nav-link btn btn-danger" href="/logout">Logga ut</a>
       </li>
     </ul>
   </nav>
