--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,20 +6,17 @@
   <title>Login</title>
   <style>
     body{
-      background-image: url(https://www.purina.co.uk/sites/default/files/2020-12/Dog_1098119012_Teaser.jpg);
-      background-repeat: no-repeat;
-      background-size: cover;
       margin: 0;
       padding: 0;
-      background-color: #17a2b8;
       height: 100vh;
     }
     #login .container #login-row #login-column #login-box {
       margin-top: 120px;
       max-width: 600px;
       height: 320px;
-      border: 1px solid #9C9C9C;
-      background-color: #EAEAEA;
+      background-color: #353535;
+      color: #ffd38c;
+
     }
     #login .container #login-row #login-column #login-box #login-form {
       padding: 20px;
@@ -30,25 +27,25 @@
     </style>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color: #222222;">
   <div id="login">
     <div class="container">
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
                     <form id="login-form" class="form" action="/login" method="post">
-                    <h3 class="text-center text-info">Login</h3>
+                    <h3 class="text-center">Login</h3>
                         <div class="form-group">
-                            <label for="username" class="text-info">Username:</label><br>
+                            <label for="username" class="text">Username:</label><br>
                             <input type="text" name="username" id="username" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label for="password" class="text-info">Password:</label><br>
-                            <input type="text" name="password" id="password" class="form-control">
+                            <label for="password" class="text">Password:</label><br>
+                            <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
-                            <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            <a href="/create" class="btn btn-info btn-md">Register here</a>
+                            <input type="submit" name="submit" style="color: #ffd38c;" class="btn btn-md" value="Logga In">
+                            <a href="/create" style="color: #ffd38c;" class="btn btn-md">Register here</a>
                         </div>
 
                     </form>
