--- a/views/user-dashboard.ejs
+++ b/views/user-dashboard.ejs
@@ -8,32 +8,32 @@
   <link rel="stylesheet" href="/public/css/admin-dash.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg ">
     <h1><%= user.username.charAt(0).toUpperCase() + user.username.slice(1) %></h1>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link btn btn-info" href="/user-logout">Logga ut</a>
+        <a class="nav-link btn btn-danger background-color:#F1F7ED;" href="/user-logout">Logga ut</a>
       </li>
     </ul>
   </nav>
 
-  <div class="row">
-    <% if (posts.length > 0) { %>
-      <% for (let i = posts.length - 1; i >= 0; i--) { %>
-        <div class="card">
-          <h2><%= posts[i].title %></h2>
-          <h5><%= posts[i].posted.toLocaleString() %></h5>
-          <div class="content-container">
-            <div class="image-container">
-              <img src="/uploads/<%= posts[i].image.toLowerCase() %>" alt="pic">
-            </div>
-            <div class="comment-container">
-              <p><%= posts[i].comment %></p>
-            </div>
+<div class="row">
+  <% if (posts.length > 0) { %>
+    <% for (let i = posts.length - 1; i >= 0; i--) { %>
+      <div class="card">
+        <h2><%= posts[i].title %></h2>
+        <h5><%= posts[i].posted.toLocaleString() %></h5>
+        <div class="content-container">
+          <div class="image-container">
+            <img src="/uploads/<%= posts[i].image.toLowerCase() %>" alt="pic">
+          </div>
+          <div class="comment-container">
+            <p><%= posts[i].comment %></p>
           </div>
         </div>
-      <% } %>
+      </div>
     <% } %>
-  </div>
+  <% } %>
+</div>
 </body>
 </html>
